--- a/app/templates/app/pelicula_detalle.html
+++ b/app/templates/app/pelicula_detalle.html
@@ -1,3 +1,12 @@
 {% extends "app\padre.html" %}
 {% load static %}
 
+{% block titulo %}
+<h1 style="color:whitesmoke">detalle de: <i>{{pelicula.nombre}}</i> </h1>
+<h3 style="color: white;"> {{ mensaje }} </h3>
+
+<p>NOMBRE : <i>{{pelicula.nombre}}</i></p>
+<p>GENERO : <i>{{pelicula.genero}}</i></p>
+<p>ANIO : <i>{{pelicula.anio}}</i></p>
+<p>ACTOR PRINCIPAL : <i>{{pelicula.actor_principal}}</i></p>
+<p>COMENTARIO : <i>{{pelicula.comentario}}</i></p>
