--- a/app/templates/app/padre.html
+++ b/app/templates/app/padre.html
@@ -24,7 +24,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="{% url 'peliculas' %}">Peliculas</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'series' %}">Series</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'documentales' %">Documentales</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'documentales' %}">Documentales</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'busqueda' %}">Buscar</a></li>
                     </ul>
                 </div>
             </div>
