--- a/app/templates/app/resultadosbusqueda1.html
+++ b/app/templates/app/resultadosbusqueda1.html
@@ -10,7 +10,7 @@
     {% if peliculas %}
    <ul>
     {% for Pelicula in peliculas %}
-    <li> {{Pelicula.nombre}} // {{Pelicula.genero}}</li>
+    <h3><li> {{Pelicula.nombre}} // {{Pelicula.genero}}</li></h3>
     
     {% endfor %}
     </ul>
