--- a/app/templates/app/resultadosbusqueda2.html
+++ b/app/templates/app/resultadosbusqueda2.html
@@ -10,7 +10,7 @@
     {% if serie %}
    <ul>
     {% for Serie in serie %}
-    <li> {{Serie.nombre}} // {{Serie.genero}}</li>
+    <h3><li> {{Serie.nombre}} // {{Serie.genero}}</li></h3>
     
     {% endfor %}
     </ul>
