--- a/app/templates/app/resultadosbusqueda3.html
+++ b/app/templates/app/resultadosbusqueda3.html
@@ -10,7 +10,7 @@
     {% if documental %}
    <ul>
     {% for Documental in documental %}
-    <li> {{Documental.nombre}} // {{Documental.genero}}</li>
+    <h3><li> {{Documental.nombre}} // {{Documental.genero}}</li></h3>
     
     {% endfor %}
     </ul>
