--- a/app/templates/app/series_list.html
+++ b/app/templates/app/series_list.html
@@ -4,13 +4,13 @@
 {% block titulo %}
 <h1 style="color:whitesmoke">Series</h1>
 <h3 style="color: rgb(255, 255, 255);"> {{ mensaje }} </h3>
+<a class="btn btn-secondary" href="{% url 'CargarSeries' %}">CARGAR</a>
 {% endblock %}
 
 {% block contenido_que_cambia %}
    <ul>
-     {% for Peliculas in object_list %}
-        <li> <i>{{serie.nombre}} </i></li> <a href="{% url 'seriessdetalle' serie.id %}">Ver</a> <a href="{% url 'seriespelicula'serie.id %}">Eliminar</a> 
-   </ul>
+     {% for serie in object_list %}
+     <h3 align="left" > <li> {{ serie }}  <a class="btn btn-primary" href="{% url 'seriesdetalle' serie.id %}" >ver</a> </li></h3>
    {% endfor %}
 
        
