--- a/app/templates/app/resultadosbusqueda3.html
+++ b/app/templates/app/resultadosbusqueda3.html
@@ -4,6 +4,7 @@
 {% block titulo %}
 <h1 style="color:whitesmoke">buscando el Documental</h1>
 <h3 style="color: rgb(255, 255, 255);"> {{ mensaje }} </h3>
+<a class="btn btn-secondary" href="{% url 'busqueda' %}">VOLVER</a>
 {% endblock %}
 
 {% block contenido_que_cambia %}
