--- a/app/templates/app/pelicula_detalle.html
+++ b/app/templates/app/pelicula_detalle.html
@@ -15,6 +15,7 @@
     <h4>ANIO : <i>{{pelicula.anio}}</i></h4>
     <h4>ACTOR PRINCIPAL : <i>{{pelicula.actor_principal}}</i></h4>
     <h4>COMENTARIO : <i>{{pelicula.comentario}}</i></h4>
+    <a class="btn btn-danger" href="{% url 'pelicula.eliminar' pelicula.id %}" >ELIMINAR</a><a class="btn btn-success" href="{% url 'pelicula.editar' pelicula.id %}" >EDITAR</a>
     
 </body>
     {% endblock %}
