--- a/app/templates/app/resultadosbusqueda2.html
+++ b/app/templates/app/resultadosbusqueda2.html
@@ -4,6 +4,7 @@
 {% block titulo %}
 <h1 style="color:whitesmoke">buscando la Serie</h1>
 <h3 style="color: rgb(255, 255, 255);"> {{ mensaje }} </h3>
+<a class="btn btn-secondary" href="{% url 'busqueda' %}">VOLVER</a>
 {% endblock %}
 
 {% block contenido_que_cambia %}
@@ -14,6 +15,7 @@
     
     {% endfor %}
     </ul>
+    
     {% endif %}
 
        
