--- a/app/templates/app/series_detalle.html
+++ b/app/templates/app/series_detalle.html
@@ -4,7 +4,7 @@
 {% block titulo %}
 <h1 style="color:whitesmoke">detalle de: <i>{{serie.nombre}}</i> </h1>
 <h3 style="color: white;"> {{ mensaje }} </h3>
-<a class="btn btn-secondary" href="{% url 'series' %}">volver</a>
+<a class="btn btn-secondary" href="{% url 'series' %}">VOLVER</a>
 {% endblock %}
 `
 {% block contenido_que_cambia %}
@@ -15,6 +15,6 @@
     <h4>TEMPORADAS : <i>{{serie.temporadas}}</i></h4>
     <h4>ACTOR PRINCIPAL : <i>{{serie.actor_principal}}</i></h4>
     <h4>COMENTARIO : <i>{{serie.comentario}}</i></h4>
-    
+    <a class="btn btn-danger" href="{% url 'series.eliminar' serie.id %}" >ELIMINAR</a><a class="btn btn-success" href="{% url 'series.editar' serie.id %}" >EDITAR</a>
 </body>
     {% endblock %}
