--- a/app/templates/app/inicio.html
+++ b/app/templates/app/inicio.html
@@ -11,5 +11,8 @@
 {% endblock %}
 
 {% block contenido_que_cambia %}
+<h1 style="color: rgb(0, 166, 255);"> {{mensaje}} </h1>
 <h2> Registrate o inicia sesion para poder acceder al contenido</h2>
+{% endblock %}
+{% block footer %}
 {% endblock %}
